Fix responsive breakpoints to have no gap
When doing things in "ems", if we had max-width x_ems and min-width x_ems+1, we actually had a 1 em gap. That max/min setup is kinda hacky to begin with, but we fix it good enough for now.

--- a/app/assets/stylesheets/local/attribute_table.scss
+++ b/app/assets/stylesheets/local/attribute_table.scss
@@ -51,7 +51,11 @@ $attribute-table-max-tabular: 22.5em;
   }
 
   // At larger sizes, a table for real.
-  @media (min-width: $attribute-table-max-tabular + 1) {
+  //
+  // $attribute-table-max-tabular may be in "ems", this is a hakcy way to do it
+  // combining max-width above with min-width here to take over, but it's what
+  // we got for now.
+  @media (min-width: $attribute-table-max-tabular + 0.01) {
     //table-layout: fixed;
     overflow: hidden;
 
